Adicionando funcionalidade para o botão

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="titulo">Olá, Isabella!</h1>
-    <button id="botao">Clique aqui</button>
+    <div id="conteudo">
+        <h1 id="titulo">Olá, Meu amor!</h1>
+        <button id="botao">Clique aqui</button>
+        <p id="mensagem"></p>
+    </div>
+
+    <h1 id="mensagemFinal" class="hidden">EU TE AMO! MINHA ESPOSA!</h1>
 
     <script src="app.js"></script>
 </body>
