--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div id="conteudo">
-        <h1 id="titulo">Olá, Meu amor!</h1>
+        <h1 id="titulo">Olá, Seja Bem Vindo!</h1>
         <button id="botao">Clique aqui</button>
         <p id="mensagem"></p>
     </div>
 
-    <h1 id="mensagemFinal" class="hidden">EU TE AMO! MINHA ESPOSA!</h1>
+    <h1 id="mensagemFinal" class="hidden">PARABÉNS! Você conseguiu</h1>
 
     <script src="app.js"></script>
 </body>
